--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,4 +1,5 @@
 <head>
-  <a href="/about">About</a>
-  <a href="/">Home</a>
+  <a href="/about">About</a><br>
+  <a href="/">Home</a><br>
+  <a href="/projects">Projects</a><br>
 </head>
